...
                android:fontFamily="sans-serif-black"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/itemNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />

...
                android:text="@string/purchase_date_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/purchaseDateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/purchase_date_hint"
                android:imeOptions="actionNext"
                android:focusable="false"/>

...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/descriptionInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/description_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

...
                android:text="@string/make_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/makeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/make_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />

...
                android:text="@string/model_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/modelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_hint"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@color/black" />
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/serialNumberInput"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:hint="@string/description_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

...
                android:text="@string/estimate_value"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/estimatedValueInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estimate_value_hint"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext" />

...
                android:text="@string/comment_label"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/commentInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/comment_hint"
                android:imeOptions="actionDone"
                android:inputType="text"/>
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_margin="10dp">

                <AutoCompleteTextView
                    android:id="@+id/autocomplete_textview_in_edit_item_add_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Delete item tag title -->
...
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_margin="10dp">

                <AutoCompleteTextView
                    android:id="@+id/autocomplete_textview_in_edit_item_delete_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:height="60dp"
                android:text="@string/save_button_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
                app:layout_goneMarginTop="50dp" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
