...
    tools:context=".ui.addTag.addTagFragment">

    <TextView
        android:id="@+id/add_tag_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Tag"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>
...
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/tagEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/blue_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/orange_button"
            android:text="Red"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/orange_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/purple_button"
            app:layout_constraintStart_toEndOf="@id/red_button"
            app:layout_constraintEnd_toStartOf="@id/yellow_button"
            android:text="Orange"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/yellow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pink_button"
            app:layout_constraintStart_toEndOf="@id/orange_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Yellow"
            android:textColor="@color/black" />

        <Button
...
            android:layout_height="wrap_content"
            android:width="150dp"
            android:height="60dp"
            android:text="@string/save_button_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="50dp" />

        <Button
            android:id="@+id/cancelButton"
...
