...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <EditText
        android:id="@+id/username"
        android:layout_width="243dp"
        android:layout_height="43dp"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/selectionsTextView"
        app:layout_constraintStart_toStartOf="@+id/selectionsTextView"
        app:layout_constraintTop_toTopOf="@+id/selectionsTextView"
        android:hint="Enter username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="243dp"
        android:layout_height="43dp"
        android:layout_marginBottom="72dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="@+id/selectionsTextView"
        app:layout_constraintStart_toStartOf="@+id/selectionsTextView"
        android:hint="Enter password"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Log in"
        app:layout_constraintBottom_toBottomOf="@+id/selectionsTextView"
        app:layout_constraintEnd_toEndOf="@+id/selectionsTextView"
...
